--- a/base/templates/layout.html
+++ b/base/templates/layout.html
@@ -1,5 +1,5 @@
-<!doctype html>
 {% load static %}
+<!doctype html>
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
@@ -14,6 +14,16 @@
     <script defer src="{% static 'common.js' %}"></script>
 </head>
 <body>
+
+{% if messages %}
+{% for message in messages %}
+<div class="alert alert-{{ message.tags }}">
+    {{ message }}
+</div>
+{% endfor %}
+{% endif %}
+
+
 {% block content %}
 {% endblock %}
 
