--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
+{% load django_bootstrap5 %}
 
 {% block content %}
 <section class="section-prod-detail mt-4">
@@ -34,22 +35,31 @@
             </li>
             {% endfor %}
         </ul>
-
-        <form method="POST" action="{% url 'qna:create_question' 'product' product.id %}">
+        <h1 class="mt-3">질문 등록</h1>
+        <form class="post-form my3" method="POST" action="{% url 'products:question_create' product.id %}">
             {% csrf_token %}
 
+            {% bootstrap_form question_form %}
+            {% bootstrap_button button_type="submit" content="질문작성" %}
+            {% bootstrap_button button_type="reset" content="취소" %}
 
-
-            <div>
-                <span>내용</span>
-                <textarea name="body" rows="10"></textarea>
-            </div>
-            <div>
-                <span>질문작성</span>
-                <input type="submit" value="작성">
-            </div>
-            
         </form>
+        <h1 class="mt-3">질문 리스트</h1>
+
+        <ul>
+            {% for question in questions %}
+            <li>
+                {{question.id}}.
+                {{question.body}}
+            </li>
+            {% endfor %}
+        </ul>
+        {% if request.user == question.author %}
+        <div class="my-3">
+            <a href="{% url 'products:question_modify' question.id  %}"
+               class="btn btn-sm btn-outline-secondary">수정</a>
+        </div>
+        {% endif %}
     </div>
 </section>
 {% endblock %}
