--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -48,9 +48,10 @@
 
         <ul>
             {% for question in questions %}
-            <li>
+            <li class="p-3">
                 {{question.id}}.
                 {{question.body}}
+                <a href="{% url 'products:question_delete' product.id question.id %}" class="btn btn-sm btn-danger">삭제</a>
             </li>
             {% endfor %}
         </ul>
