꾸미기2 호버효과 46/22:52참조

--- a/base/static/common.css
+++ b/base/static/common.css
@@ -1,3 +1,18 @@
+*, ::before, ::after {
+  --tw-translate-x: 0;
+  --tw-translate-y: 0;
+  --tw-rotate: 0;
+  --tw-skew-x: 0;
+  --tw-skew-y: 0;
+  --tw-scale-x: 1;
+  --tw-scale-y: 1;
+  --tw-transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.t-relative {
+  position: relative;
+}
+
 .t-mt-\[56\] {
   margin-top: 56;
 }
@@ -8,6 +23,10 @@
 
 .t-mt-3 {
   margin-top: 0.75rem;
+}
+
+.t-mt-2 {
+  margin-top: 0.5rem;
 }
 
 .t-block {
@@ -101,6 +120,130 @@
 html > body {
   font-family : "GmarketSansMedium" ;
   text-underline-position : under ;
+}
+
+.before\:t-absolute::before {
+  content: var(--tw-content);
+  position: absolute;
+}
+
+.before\:t-inset-0::before {
+  content: var(--tw-content);
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+}
+
+.before\:t-text-white::before {
+  content: var(--tw-content);
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.before\:t-no-underline::before {
+  content: var(--tw-content);
+  -webkit-text-decoration-line: none;
+          text-decoration-line: none;
+}
+
+.before\:t-content-\[\'\'\]::before {
+  --tw-content: '';
+  content: var(--tw-content);
+}
+
+.before\:t-content-\[\'VIEW_MORE\'\]::before {
+  --tw-content: 'VIEW MORE';
+  content: var(--tw-content);
+}
+
+.after\:t-absolute::after {
+  content: var(--tw-content);
+  position: absolute;
+}
+
+.after\:t-inset-0::after {
+  content: var(--tw-content);
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+}
+
+.after\:t-top-\[50\%\]::after {
+  content: var(--tw-content);
+  top: 50%;
+}
+
+.after\:t-left-\[50\%\]::after {
+  content: var(--tw-content);
+  left: 50%;
+}
+
+.after\:t-translate-y-\[-50\%\]::after {
+  content: var(--tw-content);
+  --tw-translate-y: -50%;
+  transform: var(--tw-transform);
+}
+
+.after\:t-translate-x-\[-50\%\]::after {
+  content: var(--tw-content);
+  --tw-translate-x: -50%;
+  transform: var(--tw-transform);
+}
+
+.after\:t-bg-red-500::after {
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
+.after\:t-bg-\[\#000000\]::after {
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.after\:t-bg-\[\#00000055\]::after {
+  content: var(--tw-content);
+  background-color: #00000055;
+}
+
+.after\:t-text-white::after {
+  content: var(--tw-content);
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.after\:t-no-underline::after {
+  content: var(--tw-content);
+  -webkit-text-decoration-line: none;
+          text-decoration-line: none;
+}
+
+.after\:t-content-\[\'hello\'\]::after {
+  --tw-content: 'hello';
+  content: var(--tw-content);
+}
+
+.after\:t-content-\[\'\'\]::after {
+  --tw-content: '';
+  content: var(--tw-content);
+}
+
+.after\:t-content-\[\'VIEW_MORE\'\]::after {
+  --tw-content: 'VIEW MORE';
+  content: var(--tw-content);
+}
+
+.hover\:before\:t-bg-\[\#00000055\]:hover::before {
+  content: var(--tw-content);
+  background-color: #00000055;
+}
+
+.hover\:after\:t-bg-\[\#00000055\]:hover::after {
+  content: var(--tw-content);
+  background-color: #00000055;
 }
 
 @media (min-width: 640px) {
