--- a/base/static/common.css
+++ b/base/static/common.css
@@ -7,14 +7,12 @@
   --tw-scale-x: 1;
   --tw-scale-y: 1;
   --tw-transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity));
 }
 
 .t-relative {
   position: relative;
-}
-
-.t-mt-\[56\] {
-  margin-top: 56;
 }
 
 .t-mt-\[56px\] {
@@ -53,24 +51,12 @@
   flex: 1 1 0%;
 }
 
-.t-grid-cols-3 {
-  grid-template-columns: repeat(3, minmax(0, 1fr));
-}
-
-.t-grid-cols-5 {
-  grid-template-columns: repeat(5, minmax(0, 1fr));
-}
-
 .t-grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
 .t-flex-col {
   flex-direction: column;
-}
-
-.t-gap-\[10px\] {
-  gap: 10px;
 }
 
 .t-gap-\[20px\] {
@@ -81,22 +67,17 @@
   white-space: nowrap;
 }
 
-.t-bg-\[\#afafaf\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(175 175 175 / var(--tw-bg-opacity));
+.t-border-solid {
+  border-style: solid;
 }
 
-.t-bg-\[\#ddd\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(221 221 221 / var(--tw-bg-opacity));
+.t-border-black {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
 .t-text-center {
   text-align: center;
-}
-
-.t-text-\[2rem\] {
-  font-size: 2rem;
 }
 
 .t-text-\[1\.5rem\] {
@@ -135,39 +116,14 @@ html > body {
   left: 0px;
 }
 
-.before\:t-text-white::before {
-  content: var(--tw-content);
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.before\:t-no-underline::before {
-  content: var(--tw-content);
-  -webkit-text-decoration-line: none;
-          text-decoration-line: none;
-}
-
 .before\:t-content-\[\'\'\]::before {
   --tw-content: '';
-  content: var(--tw-content);
-}
-
-.before\:t-content-\[\'VIEW_MORE\'\]::before {
-  --tw-content: 'VIEW MORE';
   content: var(--tw-content);
 }
 
 .after\:t-absolute::after {
   content: var(--tw-content);
   position: absolute;
-}
-
-.after\:t-inset-0::after {
-  content: var(--tw-content);
-  top: 0px;
-  right: 0px;
-  bottom: 0px;
-  left: 0px;
 }
 
 .after\:t-top-\[50\%\]::after {
@@ -178,6 +134,11 @@ html > body {
 .after\:t-left-\[50\%\]::after {
   content: var(--tw-content);
   left: 50%;
+}
+
+.after\:t-hidden::after {
+  content: var(--tw-content);
+  display: none;
 }
 
 .after\:t-translate-y-\[-50\%\]::after {
@@ -192,21 +153,46 @@ html > body {
   transform: var(--tw-transform);
 }
 
-.after\:t-bg-red-500::after {
+.after\:t-whitespace-nowrap::after {
   content: var(--tw-content);
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+  white-space: nowrap;
 }
 
-.after\:t-bg-\[\#000000\]::after {
+.after\:t-rounded::after {
   content: var(--tw-content);
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+  border-radius: 0.25rem;
 }
 
-.after\:t-bg-\[\#00000055\]::after {
+.after\:t-border-2::after {
   content: var(--tw-content);
-  background-color: #00000055;
+  border-width: 2px;
+}
+
+.after\:t-border::after {
+  content: var(--tw-content);
+  border-width: 1px;
+}
+
+.after\:t-border-solid::after {
+  content: var(--tw-content);
+  border-style: solid;
+}
+
+.after\:t-border-black::after {
+  content: var(--tw-content);
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+
+.after\:t-border-white::after {
+  content: var(--tw-content);
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+.after\:t-p-2::after {
+  content: var(--tw-content);
+  padding: 0.5rem;
 }
 
 .after\:t-text-white::after {
@@ -221,16 +207,6 @@ html > body {
           text-decoration-line: none;
 }
 
-.after\:t-content-\[\'hello\'\]::after {
-  --tw-content: 'hello';
-  content: var(--tw-content);
-}
-
-.after\:t-content-\[\'\'\]::after {
-  --tw-content: '';
-  content: var(--tw-content);
-}
-
 .after\:t-content-\[\'VIEW_MORE\'\]::after {
   --tw-content: 'VIEW MORE';
   content: var(--tw-content);
@@ -241,9 +217,9 @@ html > body {
   background-color: #00000055;
 }
 
-.hover\:after\:t-bg-\[\#00000055\]:hover::after {
+.hover\:after\:t-block:hover::after {
   content: var(--tw-content);
-  background-color: #00000055;
+  display: block;
 }
 
 @media (min-width: 640px) {
