--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -8,9 +8,11 @@
         <h1 class="t-text-[1.5rem] t-font-bold">상품리스트</h1>
         <ul class="t-grid t-grid-cols-1 sm:t-grid-cols-2 md:t-grid-cols-3 lg:t-grid-cols-4 t-gap-[20px] p-0 t-mt-3">
             {% for product in products %}
-            {% with img_class="t-relative hover:before:t-bg-[#00000055] before:t-bg-[#0000000] before:t-absolute before:t-inset-0 before:t-content-[''] after:t-content-['VIEW_MORE'] after:t-absolute after:t-no-underline after:t-text-white after:t-top-[50%] after:t-left-[50%]  after:t-translate-y-[-50%]  after:t-translate-x-[-50%]" %}
+            {% with img_box_class="t-relative" %}
+            {% with img_box_before_class="before:t-content-[''] before:t-absolute before:t-inset-0 before:t-bg-[#0000000] hover:before:t-bg-[#00000055]" %}
+            {% with img_box_after_class="after:t-content-['VIEW_MORE'] after:t-hidden hover:after:t-block after:t-no-underline after:t-text-white after:t-border-2 after:t-border-solid after:t-p-2 after:t-rounded after:t-border-white after:t-absolute after:t-top-[50%] after:t-left-[50%] after:t-translate-y-[-50%] after:t-whitespace-nowrap after:t-translate-x-[-50%]" %}
             <li class="t-flex t-flex-col">
-                <a href="{% url 'products:detail' product.id%}" class="{{ img_class }}" >
+                <a href="{% url 'products:detail' product.id%}" class="{{ img_box_class }} {{ img_box_before_class }} {{ img_box_after_class }}" >
                     <img class="t-block t-w-full" src="{{product.thumb_img_url}}" alt="">
                 </a>
 
@@ -21,6 +23,8 @@
                     {{ product.sale_price|intcomma }}원
                 </a>
             </li>
+            {% endwith %}
+            {% endwith %}
             {% endwith %}
             {% endfor %}
         </ul>
