--- a/base/static/common.css
+++ b/base/static/common.css
@@ -116,6 +116,13 @@ html > body {
   left: 0px;
 }
 
+.before\:t-transition-all::before {
+  content: var(--tw-content);
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .before\:t-content-\[\'\'\]::before {
   --tw-content: '';
   content: var(--tw-content);
@@ -207,8 +214,25 @@ html > body {
           text-decoration-line: none;
 }
 
+.after\:t-transition-all::after {
+  content: var(--tw-content);
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .after\:t-content-\[\'VIEW_MORE\'\]::after {
   --tw-content: 'VIEW MORE';
+  content: var(--tw-content);
+}
+
+.after\:t-content-\[attr\(data-before\)\]::after {
+  --tw-content: attr(data-before);
+  content: var(--tw-content);
+}
+
+.after\:t-content-\[\'VIEW-MORE\'\]::after {
+  --tw-content: 'VIEW-MORE';
   content: var(--tw-content);
 }
 
