--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -9,8 +9,8 @@
         <ul class="t-grid t-grid-cols-1 sm:t-grid-cols-2 md:t-grid-cols-3 lg:t-grid-cols-4 t-gap-[20px] p-0 t-mt-3">
             {% for product in products %}
             {% with img_box_class="t-relative" %}
-            {% with img_box_before_class="before:t-content-[''] before:t-absolute before:t-inset-0 before:t-bg-[#0000000] hover:before:t-bg-[#00000055]" %}
-            {% with img_box_after_class="after:t-content-['VIEW_MORE'] after:t-hidden hover:after:t-block after:t-no-underline after:t-text-white after:t-border-2 after:t-border-solid after:t-p-2 after:t-rounded after:t-border-white after:t-absolute after:t-top-[50%] after:t-left-[50%] after:t-translate-y-[-50%] after:t-whitespace-nowrap after:t-translate-x-[-50%]" %}
+            {% with img_box_before_class="before:t-content-[''] before:t-absolute before:t-inset-0 before:t-bg-[#0000000] hover:before:t-bg-[#00000055] before:t-transition-all" %}
+            {% with img_box_after_class="after:t-content-['VIEW_MORE'] after:t-hidden hover:after:t-block after:t-no-underline after:t-text-white after:t-border-2 after:t-border-solid after:t-p-2 after:t-rounded after:t-border-white after:t-absolute after:t-top-[50%] after:t-left-[50%] after:t-translate-y-[-50%] after:t-whitespace-nowrap after:t-translate-x-[-50%]  after:t-transition-all" %}
             <li class="t-flex t-flex-col">
                 <a href="{% url 'products:detail' product.id%}" class="{{ img_box_class }} {{ img_box_before_class }} {{ img_box_after_class }}" >
                     <img class="t-block t-w-full" src="{{product.thumb_img_url}}" alt="">
