상품상세화면

--- a/base/static/common.css
+++ b/base/static/common.css
@@ -15,16 +15,33 @@
   position: relative;
 }
 
+.t-my-\[0px\] {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
 .t-mt-\[56px\] {
   margin-top: 56px;
+}
+
+.t-mt-2 {
+  margin-top: 0.5rem;
+}
+
+.t-mt-5 {
+  margin-top: 1.25rem;
 }
 
 .t-mt-3 {
   margin-top: 0.75rem;
 }
 
-.t-mt-2 {
-  margin-top: 0.5rem;
+.t-mt-7 {
+  margin-top: 1.75rem;
+}
+
+.t-mt-\[30px\] {
+  margin-top: 30px;
 }
 
 .t-block {
@@ -47,6 +64,10 @@
   width: 100%;
 }
 
+.t-max-w-\[300px\] {
+  max-width: 300px;
+}
+
 .t-flex-1 {
   flex: 1 1 0%;
 }
@@ -67,13 +88,13 @@
   white-space: nowrap;
 }
 
-.t-border-solid {
-  border-style: solid;
+.t-py-\[20px\] {
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
-.t-border-black {
-  --tw-border-opacity: 1;
-  border-color: rgb(0 0 0 / var(--tw-border-opacity));
+.t-pt-\[56px\] {
+  padding-top: 56px;
 }
 
 .t-text-center {
@@ -96,6 +117,13 @@
   font-weight: normal;
 
   font-style: normal;
+}
+
+html > body ul,
+html > body li{
+  margin : 0 ;
+  padding : 0 ;
+  list-style : none ;
 }
 
 html > body {
@@ -175,20 +203,9 @@ html > body {
   border-width: 2px;
 }
 
-.after\:t-border::after {
-  content: var(--tw-content);
-  border-width: 1px;
-}
-
 .after\:t-border-solid::after {
   content: var(--tw-content);
   border-style: solid;
-}
-
-.after\:t-border-black::after {
-  content: var(--tw-content);
-  --tw-border-opacity: 1;
-  border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
 .after\:t-border-white::after {
@@ -223,16 +240,6 @@ html > body {
 
 .after\:t-content-\[\'VIEW_MORE\'\]::after {
   --tw-content: 'VIEW MORE';
-  content: var(--tw-content);
-}
-
-.after\:t-content-\[attr\(data-before\)\]::after {
-  --tw-content: attr(data-before);
-  content: var(--tw-content);
-}
-
-.after\:t-content-\[\'VIEW-MORE\'\]::after {
-  --tw-content: 'VIEW-MORE';
   content: var(--tw-content);
 }
 
