--- a/base/static/common.base.css
+++ b/base/static/common.base.css
@@ -8,6 +8,13 @@
     font-style: normal;
 }
 
+html > body ul,
+html > body li{
+    margin : 0 ;
+    padding : 0 ;
+    list-style : none ;
+}
+
 html > body {
     font-family : "GmarketSansMedium" ;
     text-underline-position : under ;
