--- a/base/templates/layout.html
+++ b/base/templates/layout.html
@@ -52,7 +52,7 @@
     </nav>
 </header>
 
-<div class="t-flex-1 flex-shrink-0 t-py-[20px]">
+<div class="t-flex-1 flex-shrink-0 t-py-[20px] t-flex t-flex-col">
     {% block content %}
     {% endblock %}
 </div>
