--- a/base/static/common.css
+++ b/base/static/common.css
@@ -56,6 +56,10 @@
   display: grid;
 }
 
+.t-h-full {
+  height: 100%;
+}
+
 .t-min-h-screen {
   min-height: 100vh;
 }
@@ -80,12 +84,25 @@
   flex-direction: column;
 }
 
+.t-items-center {
+  align-items: center;
+}
+
+.t-justify-center {
+  justify-content: center;
+}
+
 .t-gap-\[20px\] {
   gap: 20px;
 }
 
 .t-whitespace-nowrap {
   white-space: nowrap;
+}
+
+.t-bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
 .t-py-\[20px\] {
@@ -105,8 +122,17 @@
   font-size: 1.5rem;
 }
 
+.t-text-\[20px\] {
+  font-size: 20px;
+}
+
 .t-font-bold {
   font-weight: 700;
+}
+
+.t-text-\[color\:red\] {
+  --tw-text-opacity: 1;
+  color: rgb(255 0 0 / var(--tw-text-opacity));
 }
 
 @font-face {
