회원가입과 로그아웃

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -57,7 +57,7 @@
 
             <div class="card-body">
 
-                <form method="POST" action="{% url 'products:question_create' product.id %}">
+                <form method="POST" action="">
                     {% csrf_token %}
                     {% bootstrap_form question_form %}
                     {% bootstrap_button button_type="submit" content="질문작성" %}
