상품질문수정페이지 꾸미기

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -72,7 +72,7 @@
 
                 {% if question_form.errors %}
                 <script>
-                    let $lastform = $('form').last();
+                    let $lastForm = $('form').last();
                     $(window).on('load', function(){
                         $(window).scrollTop($lastForm.offset().top);
                     });
