--- a/products/templates/products/question_modify.html
+++ b/products/templates/products/question_modify.html
@@ -54,7 +54,7 @@
                     {% bootstrap_button button_type="reset" content="취소" %}
                 </form>
                 <script>
-                    let $lastform = $('form').last();
+                    let $lastForm = $('form').last();
                     $(window).on('load', function(){
                         $(window).scrollTop($lastForm.offset().top);
                     });
