--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -5,22 +5,25 @@
 
 <section class="section-prod-list">
     <div class="container">
-        <h1 class="t-text-[1.5rem] t-font-bold">상품리스트</h1>
+
+        <h1 class="t-text-[1.2rem] t-font-bold">최신 상품리스트</h1>
         <ul class="t-grid t-grid-cols-1 sm:t-grid-cols-2 md:t-grid-cols-3 lg:t-grid-cols-4 t-gap-[20px] t-mt-3">
             {% for product in products %}
-            {% with img_box_class="t-relative" %}
-            {% with img_box_before_class="before:t-content-[''] before:t-absolute before:t-inset-0 before:t-bg-[#0000000] hover:before:t-bg-[#00000055] before:t-transition-all" %}
-            {% with img_box_after_class="after:t-content-['VIEW_MORE'] after:t-hidden hover:after:t-block after:t-no-underline after:t-text-white after:t-border-2 after:t-border-solid after:t-p-2 after:t-rounded after:t-border-white after:t-absolute after:t-top-[50%] after:t-left-[50%] after:t-translate-y-[-50%] after:t-whitespace-nowrap after:t-translate-x-[-50%]  after:t-transition-all" %}
-            <li class="t-flex t-flex-col">
+            {% with img_box_class="t-relative t-overflow-hidden t-rounded" %}
+            {% with img_box_before_class="before:t-content-[''] before:t-absolute before:t-inset-0 before:t-bg-[#0000000] group-hover:before:t-bg-[#00000055] before:t-transition-all" %}
+            {% with img_box_after_class="after:t-content-['VIEW_MORE'] after:t-hidden group-hover:after:t-block after:t-no-underline after:t-text-white after:t-border-2 after:t-border-solid after:t-p-2 after:t-rounded after:t-border-white after:t-absolute after:t-top-[50%] after:t-left-[50%] after:t-translate-y-[-50%] after:t-whitespace-nowrap after:t-translate-x-[-50%]  after:t-transition-all" %}
+            <li class="t-flex t-flex-col t-group">
                 <a href="{% url 'products:detail' product.id%}" class="{{ img_box_class }} {{ img_box_before_class }} {{ img_box_after_class }}" >
-                    <img class="t-block t-w-full" src="{{product.thumb_img_url}}" alt="">
+                    <img class="t-block t-w-full group-hover:t-scale-110 t-transition-all t-relative t--z-50" src="{{product.thumb_img_url}}" alt="">
                 </a>
 
-                <a class="t-text-center" href="{% url 'products:detail' product.id%}">
+                <a class="t-text-center t-no-underline t-text-black t-italic group-hover:t-underline" href="{% url 'products:detail' product.id%}">
                     {{ product.display_name }}
                 </a>
-                <a class="t-text-center t-mt-2" href="{% url 'products:detail' product.id%}">
-                    {{ product.sale_price|intcomma }}원
+                <a class="t-text-center t-mt-2 t-no-underline t-text-gray-400 group-hover:t-text-blue-500" href="{% url 'products:detail' product.id%}">
+                    <i class="fas fa-won-sign"></i>
+                    <span class="">{{ product.sale_price|intcomma }}</span>
+
                 </a>
             </li>
             {% endwith %}
