--- a/base/templates/layout.html
+++ b/base/templates/layout.html
@@ -32,7 +32,7 @@
     <!-- Fixed navbar -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="#">멕아 쇼핑물</a>
+            <a class="navbar-brand" href="{% url 'main' %}">멕아 쇼핑물</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                     aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -40,10 +40,10 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">홈</a>
+                        <a class="nav-link active" aria-current="page" href="{% url 'main' %}">홈</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/products">상품리스트</a>
+                        <a class="nav-link" href="{% url 'products:list' %}">상품리스트</a>
                     </li>
                     {% if user.is_authenticated %}
                      <li class="nav-item">
@@ -52,7 +52,7 @@
 
                     {% else %}
                      <li class="nav-item">
-                        <a class="nav-link" href="{% url 'accounts:signin' %}">로그인</a>
+                        <a class="nav-link" href="{% url 'accounts:signin' %}?next={{request.path}}">로그인</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'accounts:signup' %}">회원가입</a>
