--- a/base/templates/layout.html
+++ b/base/templates/layout.html
@@ -43,7 +43,7 @@
                         <a class="nav-link active" aria-current="page" href="{% url 'main' %}">홈</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'products:list' %}">상품리스트</a>
+                        <a class="nav-link t-whitespace-nowrap" href="{% url 'products:list' %}">상품리스트</a>
                     </li>
                     {% if user.is_authenticated %}
                      <li class="nav-item">
@@ -51,11 +51,14 @@
                     </li>
 
                     {% else %}
-                     <li class="nav-item">
+                     <li class="nav-item t-whitespace-nowrap">
                         <a class="nav-link" href="{% url 'accounts:signin' %}?next={{request.path}}">로그인</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item t-whitespace-nowrap">
                         <a class="nav-link" href="{% url 'accounts:signup' %}">회원가입</a>
+                    </li>
+                    <li class="nav-item t-whitespace-nowrap">
+                        <a class="nav-link" href="{% url 'accounts:find_username' %}">아이디 찾기</a>
                     </li>
                     {% endif %}
                 </ul>
