--- a/base/templates/layout.html
+++ b/base/templates/layout.html
@@ -7,7 +7,9 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>멋블리</title>
+    <title>
+        멋블리
+    </title>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
@@ -32,7 +34,7 @@
     <!-- Fixed navbar -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="{% url 'main' %}">멋블리</a>
+            <a class="navbar-brand" href="{% url 'main' %}"><i class="fab fa-pied-piper-hat"></i> 멋블리</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                     aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -40,25 +42,22 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'main' %}">홈</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link t-whitespace-nowrap" href="{% url 'products:list' %}">상품리스트</a>
+                        <a class="nav-link t-whitespace-nowrap" href="{% url 'products:list' %}"><i class="fas fa-tshirt"></i>상품리스트</a>
                     </li>
                     {% if user.is_authenticated %}
                      <li class="nav-item">
-                        <a class="nav-link" href="{% url 'accounts:signout' %}">로그아웃</a>
+                        <a class="nav-link" href="{% url 'accounts:signout' %}"><i class="fas fa-sign-out-alt"></i>로그아웃</a>
                     </li>
 
                     {% else %}
                      <li class="nav-item t-whitespace-nowrap">
-                        <a class="nav-link" href="{% url 'accounts:signin' %}?next={{request.path}}">로그인</a>
+                        <a class="nav-link" href="{% url 'accounts:signin' %}?next={{request.path}}"><i class="fas fa-sign-in-alt"></i>로그인</a>
                     </li>
                     <li class="nav-item t-whitespace-nowrap">
-                        <a class="nav-link" href="{% url 'accounts:signup' %}">회원가입</a>
+                        <a class="nav-link" href="{% url 'accounts:signup' %}"><i class="fas fa-user-plus"></i>회원가입</a>
                     </li>
                     <li class="nav-item t-whitespace-nowrap">
-                        <a class="nav-link" href="{% url 'accounts:find_username' %}">아이디 찾기</a>
+                        <a class="nav-link" href="{% url 'accounts:find_username' %}"><i class="fas fa-users"></i>아이디 찾기</a>
                     </li>
                     {% endif %}
                 </ul>
@@ -79,7 +78,7 @@
 
 <footer class="footer py-3 bg-light">
     <div class="container t-text-center">
-        <span class="text-muted">copyright(c) 2002 All rights reserved -</span>
+        <span class="text-muted"><i class="fab fa-pied-piper-hat"></i>멋블리</span>
     </div>
 </footer>
 
