상품이미지 변경

--- a/base/static/common.css
+++ b/base/static/common.css
@@ -113,6 +113,11 @@
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
+.t-object-cover {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 .t-py-\[20px\] {
   padding-top: 20px;
   padding-bottom: 20px;
