--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -14,7 +14,7 @@
             {% with img_box_after_class="after:t-content-['VIEW_MORE'] after:t-hidden group-hover:after:t-block after:t-no-underline after:t-text-white after:t-border-2 after:t-border-solid after:t-p-2 after:t-rounded after:t-border-white after:t-absolute after:t-top-[50%] after:t-left-[50%] after:t-translate-y-[-50%] after:t-whitespace-nowrap after:t-translate-x-[-50%]  after:t-transition-all" %}
             <li class="t-flex t-flex-col t-group">
                 <a href="{% url 'products:detail' product.id%}" class="{{ img_box_class }} {{ img_box_before_class }} {{ img_box_after_class }}" >
-                    <img class="t-block t-w-full group-hover:t-scale-110 t-transition-all t-relative t--z-50" src="{{product.thumb_img_url}}" alt="">
+                    <img class="t-block t-w-full group-hover:t-scale-110 t-transition-all t-relative t--z-50 t-object-cover" src="{{product.thumb_img_url}}" alt="" style="aspect-ratio: 1 / 1;">
                 </a>
 
                 <a class="t-text-center t-no-underline t-text-black t-italic group-hover:t-underline" href="{% url 'products:detail' product.id%}">
