상품상세화면 꾸미기

--- a/base/static/common.css
+++ b/base/static/common.css
@@ -44,6 +44,10 @@
   display: block;
 }
 
+.t-inline-block {
+  display: inline-block;
+}
+
 .t-flex {
   display: flex;
 }
@@ -324,6 +328,22 @@ html > body {
 }
 
 @media (min-width: 640px) {
+  .sm\:t-w-10 {
+    width: 2.5rem;
+  }
+
+  .sm\:t-w-20 {
+    width: 5rem;
+  }
+
+  .sm\:t-w-40 {
+    width: 10rem;
+  }
+
+  .sm\:t-w-16 {
+    width: 4rem;
+  }
+
   .sm\:t-grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
