--- a/accounts/templates/accounts/signin.html
+++ b/accounts/templates/accounts/signin.html
@@ -13,6 +13,7 @@
                 {% bootstrap_button button_type="submit" content="로그인" %}
                 {% bootstrap_button button_type="reset" content="취소" %}
             </form>
+            <a href="{% url 'accounts:kakao_signin' %}">카카오로 로그인</a>
         </div>
     </div>
 </section>
