페이지 이동해도 검색어 유지

--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -42,7 +42,7 @@
             <!-- 이전페이지 -->
             {% if products.has_previous %}
             <li class="page-item">
-                <a class="page-link" href="?page={{ products.previous_page_number }}">이전</a>
+                <a class="page-link" href="?page={{ products.previous_page_number }}&search_keyword={{request.GET.search_keyword}}">이전</a>
             </li>
             {% else %}
             <li class="page-item disabled">
@@ -54,11 +54,11 @@
             {% if products.number|add:-5 <= page_number <= products.number|add:5 %}
             {% if page_number == products.number %}
             <li class="page-item active" aria-current="page">
-                <a class="page-link" href="?page={{ page_number }}">{{ page_number }}</a>
+                <a class="page-link" href="?page={{ page_number }}&search_keyword={{request.GET.search_keyword}}">{{ page_number }}</a>
             </li>
             {% else %}
             <li class="page-item">
-                <a class="page-link" href="?page={{ page_number }}">{{ page_number }}</a>
+                <a class="page-link" href="?page={{ page_number }}&search_keyword={{request.GET.search_keyword}}">{{ page_number }}</a>
             </li>
             {% endif %}
             {% endif %}
@@ -66,7 +66,7 @@
             <!-- 다음페이지 -->
             {% if products.has_next %}
             <li class="page-item">
-                <a class="page-link" href="?page={{ products.next_page_number }}">다음</a>
+                <a class="page-link" href="?page={{ products.next_page_number }}&search_keyword={{request.GET.search_keyword}}">다음</a>
             </li>
             {% else %}
             <li class="page-item disabled">
