--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -57,6 +57,7 @@
                         <th>사이즈</th>
                         <th>색상</th>
                         <th>품절</th>
+                        <th>장바구니</th>
                     </tr>
                     </thead>
                     {% for product_real in product_reals %}
@@ -75,21 +76,20 @@
                             <span class="badge bg-secondary">품절</span>
                             {% endif %}
                         </td>
+                        <td>
+                            <form method="POST" action="{% url 'cart:cart_view' %}">
+                                {% csrf_token %}
+                                {% bootstrap_button button_type="submit" content="담기" %}
+
+                            </form>
+                        </td>
                     </tr>
                     {% endfor %}
                     </tbody>
                 </table>
             </div>
 
-            <ul class="list-group list-group-flush">
-                {% for product_real in product_reals %}
-                <li class="list-group-item">
-                    {{product_real.option_1_type}} : <span class="badge bg-secondary">{{product_real.option_1_display_name}}</span>
-                    /
-                    {{product_real.option_2_type}} : <span class="badge bg-secondary">{{product_real.option_2_display_name}}</span>
-                </li>
-                {% endfor %}
-            </ul>
+
         </div>
         <div class="card t-mt-[30px]">
             <div class="card-header">
@@ -117,6 +117,7 @@
                     (function(){
                         $(window).scrollTop($Form.offset().top);
                     });
+
 
 
 
