--- a/base/static/common.css
+++ b/base/static/common.css
@@ -131,6 +131,14 @@
      object-fit: cover;
 }
 
+.t-p-2 {
+  padding: 0.5rem;
+}
+
+.t-p-\[10px\] {
+  padding: 10px;
+}
+
 .t-py-\[20px\] {
   padding-top: 20px;
   padding-bottom: 20px;
