--- a/base/templates/layout.html
+++ b/base/templates/layout.html
@@ -49,7 +49,7 @@
                     </li>
                     {% if user.is_authenticated %}
                      <li class="nav-item">
-                        <a class="nav-link" href="{% url 'accounts:signout' %}"><i class="fas fa-sign-out-alt"></i>로그아웃</a>
+                        <a class="nav-link t-whitespace-nowrap" href="{% url 'accounts:signout' %}"><i class="fas fa-sign-out-alt"></i>로그아웃</a>
                     </li>
                     <li class="nav-item">
                         <a href="" class="nav-link t-whitespace-nowrap">
