--- a/cart/templates/cart/cart_list.html
+++ b/cart/templates/cart/cart_list.html
@@ -4,4 +4,22 @@
 
 {%block content %}
 
-{%endblock%}
+<section class="section-prod-list">
+    <div class="container">
+        <div class="card">
+            <div class="card-header">
+                장바구니 품목
+            </div>
+            <div class="card-body">
+
+                {{ sale_price }}
+
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
+{% endblock %}
+
