--- a/cart/templates/cart/cart_list.html
+++ b/cart/templates/cart/cart_list.html
@@ -6,19 +6,66 @@
 
 <section class="section-prod-list">
     <div class="container">
-        <div class="card">
-            <div class="card-header">
-                장바구니 품목
+        <div class="card t-mt-[30px]">
+            <div class="t-flex card-header">
+                <span class="t-w-11/12 t-text-xl t-font-bold t-text-black-500"><i class="fas fa-shopping-cart"></i> 장바구니 품목</span>
+
+                <form action="#" method="POST">
+                    {% csrf_token %}
+                    <div class="t-w-1/12 t-px-0 t-text-xl t-items-end t-whitespace-nowrap"><a href="#"
+                                                                                              class="t-text-black t-no-underline"><i
+                            class="far fa-trash-alt"></i>삭제</a></div>
+                </form>
+
+
             </div>
             <div class="card-body">
 
-                {{ sale_price }}
+
+                <div class="row">
+                    <table class="table">
+                        <thead>
+                        <th>이름</th>
+                        <th>수량</th>
+                        <th>가격</th>
+                        </thead>
+                        <tbody>
+                        {% for item in add %}
+                        <tr>
+                            <td>
+                                {{ item.product.name }}
+                                <ul>
+                                    {% for variation in item.variations.all %}
+                                    <li>{{ variation.title }}</li>
+                                    {% endfor %}
+                                </ul>
+                            </td>
+
+                            <td>{{ item.quantity }}</td>
+                            <td>${{ item.product.price }}</td>
+                            <td>
+
+                            </td>
+                        </tr>
+                        {% endfor %}
+                        </tbody>
+                        <tfoot>
+                        <tr>
+                            <td>총합</td>
+                            <td></td>
+                            <td>\</td>
+                            <td></td>
+                        </tr>
+                        </tfoot>
+                    </table>
+                    <a class="btn btn-success" href="#">구매</a>
+                </div>
+
 
             </div>
         </div>
     </div>
 </section>
-
 
 
 {% endblock %}
